# vscode-chat-extractor

./: .clinerules-architect  .clinerules-code  .cursorignore  .cursorrules  .dockerignore  .env.example  .extra_repo_ignores  .gitignore  CODING_GUIDES_gemini_model.md  CODING_GUIDES_key_principles.md  CODING_GUIDES_py_fastapi.md  CODING_LEARNINGS_interaction.md  README.md  deep_search_extract.py  dump_sqlite.py  extract_all_chats.py  extract_and_organize.sh  extract_chat.py  md_to_html.py  mypy.ini  organize_chats.py  organize_chats.py.bak  pre_plugin_mypy.sh  pre_plugin_ruff.sh  precommit.sh  pyproject.toml  sample_stat_dmp_sql.txt  sqlite_dump.py  test_if_found_in_extracted_content.sh
organized_chats_sample/bubble_001_09dfa4e0-e3f1-4870-b10c-836b33a08f5c/: conversation.md  cursor_bubbleId:09dfa4e0-e3f1-4870-b10c-836b33a08f5c:0f24dd3f-bdd9-4022-83fe-0ecc694a508b.json  cursor_bubbleId:09dfa4e0-e3f1-4870-b10c-836b33a08f5c:2239684c-d22a-45ae-8c32-18766a5db272.json  cursor_bubbleId:09dfa4e0-e3f1-4870-b10c-836b33a08f5c:89c58276-d313-4d89-a040-3abe55c57add.json  cursor_bubbleId:09dfa4e0-e3f1-4870-b10c-836b33a08f5c:abc9e6c7-b065-4778-b5e8-ffbfebe5f9c8.json  cursor_bubbleId:09dfa4e0-e3f1-4870-b10c-836b33a08f5c:fe41d9db-7925-4747-b699-708ca28c0d6a.json
organized_chats_test/: index.md  legacy_conversation_001_6fd3aa00-bd52-471a-8418-9d818eb2a890.md  search_results_node_demo.md
vscode_chat_viewer/: .env.example  README.md  pyproject.toml
vscode_chat_viewer/app/: __init__.py  db_service.py  main.py  models.py
vscode_chat_viewer/web/: index.html  script.js  style.css
