[tool.poetry]
name = "vscode-chat-extractor"
version = "0.1.0"
package-mode = false
description = "VS Code Chat Extractor"

[tool.poetry.dependencies]
python = "3.11.*"
pydantic = "*"
fastapi = "*"
uvicorn = "*"
python-dotenv = "*"
markdown = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-asyncio = "*"
ruff = "*"
mypy = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"